:memo: Docs: 카테고리 그룹화 (#85)